--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="divder"></div>
-                    <p style="text-align: center; color: white; font-family: cursive; font-weight: bold; font-size: 20px;">Clara's Kitchen invites you to embark on a culinary adventure where every dish tells a story of passion, creativity, and
+                    <p style="text-align: center; color: white; font-family: monospace; font-weight: bold; font-size: 20px;">Clara's Kitchen invites you to embark on a culinary adventure where every dish tells a story of passion, creativity, and
                     craftsmanship. Nestled in the heart of our community, we take pride in curating a menu that celebrates the diversity of
                     flavors and ingredients. From our kitchen to your table, savor the experience of homemade goodness, where every bite is
                     a testament to our dedication to quality and excellence. Join us in creating cherished memories and unforgettable
