--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="./res/head icon.png" type="image/x-icon">
     <title>Clara's Kitchen</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    
+        * {
+            font-family: "Poppins", sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -143,7 +150,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="divder"></div>
-                    <p style="text-align: center; color: white; font-family: monospace; font-weight: bold; font-size: 20px;">Clara's Kitchen invites you to embark on a culinary adventure where every dish tells a story of passion, creativity, and
+                    <p style="text-align: center; color: white; font-family: Poppins; font-weight: bold; font-size: 20px;">Clara's Kitchen invites you to embark on a culinary adventure where every dish tells a story of passion, creativity, and
                     craftsmanship. Nestled in the heart of our community, we take pride in curating a menu that celebrates the diversity of
                     flavors and ingredients. From our kitchen to your table, savor the experience of homemade goodness, where every bite is
                     a testament to our dedication to quality and excellence. Join us in creating cherished memories and unforgettable
